[tool.poetry]
name = "busca-binaria-python"
version = "0.1.0"
description = ""
authors = ["carvalhocaio <caiocarvalho.py@gmail.com>"]
readme = "README.md"
packages = [{include = "busca_binaria_python"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
